--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Things to ponder while listening to song or reading the lyrics:
 Pick out events/ideas from the song that stood out to you.
 <br>
 <br>
-If the US had managed to take over Canada, do you think things would be the same in Canada or do you think things would stay the same?
+If the US had managed to take over Canada, do you think things would be different in Canada or do you think things would stay the same?
 <br>
 <br>
 In light of the current political atmosphere between Canda and the US, can you any comparisons between the events of the song and now..
@@ -68,3 +68,4 @@ Is it possible that History repeats itself?
 </body>
 
 </html>
+
