--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Pick out events/ideas from the song that stood out to you.
 If the US had managed to take over Canada, do you think things would be different in Canada or do you think things would stay the same?
 <br>
 <br>
-In light of the current political atmosphere between Canda and the US, can you any comparisons between the events of the song and now..
+In light of the current political atmosphere between Canada and the US, can you make any comparisons between the events of the song and now..
 <br>
 <br>
 Why did the US try to take over Canada in 1812?
@@ -68,4 +68,5 @@ Is it possible that History repeats itself?
 </body>
 
 </html>
+
 
