--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Links you will need open!
 <br>
 Things to ponder while listening to song or reading the lyrics:
 <br>
-(It might be helpful to write your ideas down)
+(It might be helpful to write your ideas down for discussion purposes)
 <br>
 <br>
 Pick out events/ideas from the song that stood out to you.
@@ -68,5 +68,6 @@ Is it possible that History repeats itself?
 </body>
 
 </html>
+
 
 
