--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ Pick out events/ideas from the song that stood out to you.
 If the US had managed to take over Canada, do you think things would be different in Canada or do you think things would stay the same?
 <br>
 <br>
+Do you know why the US tried to take over Canada in 1812?
+<br>
+<br>
 In light of the current political atmosphere between Canada and the US, can you make any comparisons between the events of the song and now..
-<br>
-<br>
-Why did the US try to take over Canada in 1812?
 <br>
 <br>
 Is it possible that History repeats itself?
@@ -68,6 +68,7 @@ Is it possible that History repeats itself?
 </body>
 
 </html>
+
 
 
 
